--- a/package.json
+++ b/package.json
@@ -5,22 +5,24 @@
     "npm": ">=3.1 <4"
   },
   "dependencies": {
-    "babel-core": "5.8.25",
-    "classnames": "2.1.5",
-    "eventemitter3": "1.1.1",
-    "express": "4.13.3",
-    "fastclick": "1.0.6",
-    "fbjs": "0.3.1",
-    "flux": "2.1.1",
-    "front-matter": "1.0.0",
-    "history": "1.11.1",
-    "jade": "1.11.0",
-    "normalize.css": "3.0.3",
-    "react": "0.14.0-rc1",
-    "react-dom": "0.14.0-rc1",
-    "react-routing": "0.0.4",
-    "source-map-support": "0.3.2",
-    "superagent": "1.4.0"
+    "babel-core": "~5.8.25",
+    "bootstrap": "~3.3.5",
+    "classnames": "~2.1.5",
+    "eventemitter3": "~1.1.1",
+    "express": "~4.13.3",
+    "fastclick": "~1.0.6",
+    "fbjs": "~0.3.1",
+    "flux": "~2.1.1",
+    "front-matter": "~1.0.0",
+    "history": "~1.12.0",
+    "jade": "~1.11.0",
+    "normalize.css": "~3.0.3",
+    "react": "~0.14.0",
+    "react-bootstrap": "~0.27.3",
+    "react-dom": "~0.14.0",
+    "react-router": "1.0.0-rc4",
+    "source-map-support": "~0.3.2",
+    "superagent": "~1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
@@ -42,6 +44,8 @@
     "glob": "^5.0.15",
     "jest-cli": "^0.5.8",
     "jscs": "^2.2.1",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.1",
     "lodash.merge": "^3.3.2",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
