--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-dom": "~0.14.0",
     "react-router": "1.0.0-rc4",
     "source-map-support": "~0.3.2",
-    "superagent": "~1.4.0"
+    "superagent": "~1.4.0",
+    "redis": "~2.3.0",
+    "cookie-parser": "~1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
