--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fastclick": "~1.0.6",
     "fbjs": "~0.3.1",
     "flux": "~2.1.1",
+    "formsy-react": "^0.17.0",
     "front-matter": "~1.0.0",
     "history": "~1.12.0",
     "jade": "~1.11.0",
