--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   },
   "dependencies": {
     "babel-core": "~5.8.25",
+    "body-parser": "~1.14.1",
     "bootstrap": "~3.3.5",
     "classnames": "~2.1.5",
+    "cookie-parser": "~1.4.0",
     "eventemitter3": "~1.1.1",
     "express": "~4.13.3",
     "fastclick": "~1.0.6",
@@ -16,17 +18,16 @@
     "front-matter": "~1.0.0",
     "history": "~1.12.0",
     "jade": "~1.11.0",
+    "nodemailer": "~1.10.0",
+    "nodemailer-smtp-transport": "^1.0.4",
     "normalize.css": "~3.0.3",
     "react": "~0.14.0",
     "react-bootstrap": "~0.27.3",
     "react-dom": "~0.14.0",
     "react-router": "1.0.0-rc4",
-    "source-map-support": "~0.3.2",
-    "superagent": "~1.4.0",
     "redis": "~2.3.0",
-    "cookie-parser": "~1.4.0",
-    "body-parser": "~1.14.1",
-    "nodemailer": "~1.10.0"
+    "source-map-support": "~0.3.2",
+    "superagent": "~1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
