--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react": "~0.14.0",
     "react-bootstrap": "~0.27.3",
     "react-dom": "~0.14.0",
-    "react-router": "1.0.0-rc4",
+    "react-router": "~1.0.0",
     "redis": "~2.3.0",
     "source-map-support": "~0.3.2",
     "superagent": "~1.4.0",
