--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router": "1.0.0-rc4",
     "redis": "~2.3.0",
     "source-map-support": "~0.3.2",
-    "superagent": "~1.4.0"
+    "superagent": "~1.4.0",
+    "socket.io": "~1.3.7"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
