--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "nodemailer-smtp-transport": "^1.0.4",
     "normalize.css": "~3.0.3",
     "react": "~0.14.0",
+    "react-addons-update": "^0.14.3",
     "react-bootstrap": "~0.27.3",
     "react-dom": "~0.14.0",
     "react-router": "~1.0.0",
     "redis": "~2.3.0",
+    "socket.io": "~1.3.7",
+    "socket.io-client": "^1.3.7",
+    "socket.io-cookie": "0.0.1",
     "source-map-support": "~0.3.2",
-    "superagent": "~1.4.0",
-    "socket.io": "~1.3.7"
+    "superagent": "~1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
