--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.14.1",
     "bootstrap": "~3.3.5",
     "classnames": "~2.1.5",
+    "cookie": "^0.2.3",
     "cookie-parser": "~1.4.0",
     "eventemitter3": "~1.1.1",
     "express": "~4.13.3",
@@ -27,7 +28,7 @@
     "react-bootstrap": "~0.27.3",
     "react-dom": "~0.14.0",
     "react-router": "~1.0.0",
-    "redis": "~2.3.0",
+    "ioredis": "~1.11.1",
     "socket.io": "~1.3.7",
     "socket.io-client": "^1.3.7",
     "socket.io-cookie": "0.0.1",
