--- a/package.json
+++ b/package.json
@@ -1,70 +1,75 @@
 {
   "private": true,
   "engines": {
-    "node": ">=4.1 <5",
-    "npm": ">=3.1 <4"
+    "node": ">=5.0 <6",
+    "npm": ">=3.3 <4"
   },
   "dependencies": {
-    "babel-core": "~5.8.25",
-    "body-parser": "~1.14.1",
-    "bootstrap": "~3.3.5",
-    "classnames": "~2.1.5",
-    "cookie": "^0.2.3",
-    "cookie-parser": "~1.4.0",
-    "eventemitter3": "~1.1.1",
-    "express": "~4.13.3",
-    "fastclick": "~1.0.6",
-    "fbjs": "~0.3.1",
-    "flux": "~2.1.1",
+    "babel-polyfill": "6.6.1",
+    "babel-runtime": "6.6.1",
+    "bluebird": "^3.3.3",
+    "body-parser": "^1.15.0",
+    "bootstrap": "^3.3.0",
+    "classnames": "^2.2.0",
+    "cookie": "^0.2.0",
+    "cookie-parser": "^1.4.0",
+    "eventemitter3": "^1.1.1",
+    "express": "^4.13.3",
+    "fastclick": "^1.0.6",
+    "fbjs": "^0.3.1",
+    "flux": "^2.1.1",
     "formsy-react": "^0.17.0",
-    "front-matter": "~1.0.0",
-    "history": "~1.12.0",
-    "jade": "~1.11.0",
-    "nodemailer": "~1.10.0",
+    "front-matter": "^1.0.0",
+    "history": "^1.12.0",
+    "ioredis": "^1.11.1",
+    "nodemailer": "^1.10.0",
     "nodemailer-smtp-transport": "^1.0.4",
-    "normalize.css": "~3.0.3",
-    "react": "~0.14.0",
+    "normalize.css": "^3.0.3",
+    "react": "^0.14.0",
     "react-addons-update": "^0.14.3",
-    "react-bootstrap": "~0.27.3",
-    "react-dom": "~0.14.0",
-    "react-router": "~1.0.0",
-    "ioredis": "~1.11.1",
-    "socket.io": "~1.3.7",
+    "react-bootstrap": "^0.27.3",
+    "react-dom": "^0.14.0",
+    "react-router": "^1.0.0",
+    "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
     "socket.io-cookie": "0.0.1",
-    "source-map-support": "~0.3.2",
-    "superagent": "~1.4.0"
+    "source-map-support": "^0.3.2",
+    "superagent": "^1.4.0"
   },
   "devDependencies": {
+    "assets-webpack-plugin": "^3.3.0",
     "autoprefixer": "^6.0.3",
-    "babel": "^5.8.23",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "^5.3.2",
-    "babel-plugin-react-transform": "^1.1.1",
+    "babel-cli": "^6.6.0",
+    "babel-eslint": "^5.0.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-transform-runtime": "^6.6.0",
+    "babel-plugin-transform-decorators-legacy" : "^1.3.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.9.7",
     "css-loader": "^0.19.0",
     "csscomb": "^3.1.8",
     "del": "^2.0.2",
-    "eslint": "^1.6.0",
-    "eslint-config-airbnb": "0.1.0",
-    "eslint-loader": "^1.0.0",
-    "eslint-plugin-react": "^3.5.0",
+    "eslint": "1.10.3",
+    "eslint-config-standard": "^4.4.0",
+    "eslint-plugin-no-console-log": "^1.0.0",
+    "eslint-plugin-react": "3.16.1",
+    "eslint-plugin-standard": "1.3.2",
     "file-loader": "^0.8.4",
     "gaze": "^0.5.1",
     "git-repository": "^0.1.1",
     "glob": "^5.0.15",
-    "jest-cli": "^0.5.8",
-    "jscs": "^2.2.1",
-    "less": "^2.5.3",
-    "less-loader": "^2.2.1",
-    "lodash.merge": "^3.3.2",
+    "lodash.merge": "^4.0.0",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
-    "postcss": "^5.0.8",
-    "postcss-cssnext": "^2.1.0",
-    "postcss-import": "^7.0.0",
-    "postcss-loader": "^0.6.0",
-    "postcss-nested": "^1.0.0",
+    "postcss": "^5.0.19",
+    "less-loader" : "^2.2.2",
+    "less" : "^2.3.1",
+    "postcss-import": "^8.0.2",
+    "postcss-loader": "^0.8.1",
+    "precss": "^1.4.0",
     "psi": "^1.0.6",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
@@ -72,28 +77,22 @@
     "replace": "^0.3.0",
     "style-loader": "^0.12.4",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.2",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.3.0"
-  },
-  "jest": {
-    "rootDir": "./src",
-    "scriptPreprocessor": "../preprocessor.js",
-    "unmockedModulePathPatterns": [
-      "fbjs",
-      "react"
-    ]
+    "webpack": "^1.12.14",
+    "webpack-hot-middleware": "^2.9.0",
+    "webpack-middleware": "^1.5.1"
   },
   "scripts": {
-    "lint": "eslint src tools && jscs src tools",
+    "lint": "eslint src tools",
     "csslint": "csscomb src/components --lint --verbose",
     "csscomb": "csscomb src/components --verbose",
-    "test": "",
-    "clean": "babel-node --eval \"require('./tools/clean')().catch(err => console.error(err.stack))\"",
-    "copy": "babel-node --eval \"require('./tools/copy')().catch(err => console.error(err.stack))\"",
-    "bundle": "babel-node --eval \"require('./tools/bundle')().catch(err => console.error(err.stack))\"",
-    "build": "babel-node --eval \"require('./tools/build')().catch(err => console.error(err.stack))\"",
-    "serve": "babel-node --eval \"require('./tools/serve')().catch(err => console.error(err.stack))\"",
-    "start": "babel-node --eval \"require('./tools/start')().catch(err => console.error(err.stack))\""
+    "clean": "babel-node tools/run clean",
+    "copy": "babel-node tools/run copy",
+    "bundle": "babel-node tools/run bundle",
+    "build": "babel-node tools/run build",
+    "serve": "babel-node tools/run serve",
+    "start": "babel-node tools/run start"
+  },
+  "standard": {
+    "parser": "babel-eslint"
   }
 }
