--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "css-loader": "^0.19.0",
     "csscomb": "^3.1.8",
     "del": "^2.0.2",
+    "es6-promisify": "^3.0.0",
     "eslint": "^1.6.0",
     "eslint-config-airbnb": "0.1.0",
     "eslint-loader": "^1.0.0",
